optimised code <Removed duplicates>